# nvidia-nat-langgraph-deep-research-agent

./: .env.example  README.md  nvidia-nat-langgraph-deep-research-agent.ipynb  pyproject.toml
configs/: config.yml
src/deep_research/: file_tools.py  graph.py  prompts.py  register.py  research_tools.py  state.py  task_tool.py  todo_tools.py
